# mindsync-v2

./: .env.example  .gitignore  README.md  docker-compose.yml  mindsync.sh  opencode.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py
backend/app/rag/: engine.py  ingestion.py
backend/app/services/: conversation.py  message_handler.py  rate_limiter.py
backend/app/waha/: client.py  webhook.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/conversations/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/evaluation/: page.tsx
frontend/src/app/(dashboard)/knowledge-base/: page.tsx
frontend/src/app/(dashboard)/playground/: page.tsx
frontend/src/app/(dashboard)/sessions/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/app/: file-preview.tsx  markdown-content.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/lib/: api.ts  auth-store.ts  providers.tsx
