[project]
name = "mindsync-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "qdrant-client>=1.9",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.8",
    "python-dotenv>=1.0",
    "langchain-text-splitters>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"
